[gd_scene load_steps=7 format=3 uid="uid://dcab7mg225do8"]

[ext_resource type="Script" path="res://Interaction/BoatStore/BoatStore.gd" id="1_ndm6h"]
[ext_resource type="FontFile" uid="uid://drnckmvhotjsv" path="res://Lito-main menu/Assets/Fonts/GramatikaTrial-Bold-BF65dea4c5530e5.otf" id="2_quthi"]
[ext_resource type="Theme" uid="uid://c30qsbfwolqdo" path="res://Interaction/storetheme.tres" id="3_33gg1"]
[ext_resource type="Texture2D" uid="uid://diecigklwosh6" path="res://Interaction/BoatStore/ship.png" id="4_8t547"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7x3u8"]
bg_color = Color(0.63, 0.2394, 0.2394, 1)

[sub_resource type="Theme" id="Theme_ja0x6"]
Button/styles/normal = SubResource("StyleBoxFlat_7x3u8")

[node name="BoatStore" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ndm6h")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -526.0
offset_top = -189.0
offset_right = 526.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.262745, 0.411765, 1)

[node name="cancel" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.876
anchor_top = 0.268
anchor_right = 0.876
anchor_bottom = 0.268
offset_left = -65.152
offset_top = -21.664
offset_right = 64.848
offset_bottom = 21.336
theme = SubResource("Theme_ja0x6")
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("2_quthi")
text = "TUTUP"

[node name="Label" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.275
anchor_right = 0.5
anchor_bottom = 0.275
offset_left = -272.5
offset_top = -56.2
offset_right = 272.5
offset_bottom = 41.8
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_quthi")
theme_override_font_sizes/font_size = 46
text = "TOKO PERAHU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -504.0
offset_top = -150.5
offset_right = 504.0
offset_bottom = 216.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_33gg1")
theme_override_fonts/font = ExtResource("2_quthi")

[node name="Perahu" type="TabBar" parent="TabContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Perahu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.0
offset_top = -149.0
offset_right = 488.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="control" type="Node2D" parent="TabContainer/Perahu/RichTextLabel"]
position = Vector2(-3, -0.5)

[node name="Panel3" type="Panel" parent="TabContainer/Perahu/RichTextLabel/control"]
offset_left = 18.0
offset_top = 199.0
offset_right = 664.0
offset_bottom = 274.0
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TabContainer/Perahu/RichTextLabel/control/Panel3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.0
offset_top = -22.5
offset_right = 141.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_quthi")
theme_override_font_sizes/font_size = 31
text = "penyimpanan sampah +10"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="TabContainer/Perahu/RichTextLabel/control/Panel3"]
layout_mode = 0
offset_left = 441.0
offset_top = 18.0
offset_right = 626.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_quthi")
text = "BUY"
metadata/_edit_use_anchors_ = true

[node name="Panel2" type="Panel" parent="TabContainer/Perahu/RichTextLabel/control"]
offset_left = 17.0
offset_top = 108.0
offset_right = 663.0
offset_bottom = 183.0
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TabContainer/Perahu/RichTextLabel/control/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.0
offset_top = -22.5
offset_right = 141.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_quthi")
theme_override_font_sizes/font_size = 31
text = "penyimpanan sampah +10"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="TabContainer/Perahu/RichTextLabel/control/Panel2"]
layout_mode = 0
offset_left = 441.0
offset_top = 18.0
offset_right = 626.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_quthi")
text = "BUY"
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="TabContainer/Perahu/RichTextLabel/control"]
offset_left = 16.0
offset_top = 18.0
offset_right = 662.0
offset_bottom = 93.0
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TabContainer/Perahu/RichTextLabel/control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.0
offset_top = -22.5
offset_right = 141.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_quthi")
theme_override_font_sizes/font_size = 31
text = "penyimpanan sampah +10"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="TabContainer/Perahu/RichTextLabel/control/Panel"]
layout_mode = 0
offset_left = 441.0
offset_top = 18.0
offset_right = 626.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_quthi")
text = "BUY"
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
offset_left = 96.0
offset_top = 233.0
offset_right = 380.0
offset_bottom = 515.0

[node name="Sprite2D" type="Sprite2D" parent="Panel"]
top_level = true
position = Vector2(235, 380)
scale = Vector2(0.174614, 0.19323)
texture = ExtResource("4_8t547")

[connection signal="pressed" from="cancel" to="." method="_on_cancel_pressed"]
